[package]
authors = ["RSS Blue", "Dovydas Joksas"]
name = "v4v"
version = "0.3.0"
edition = "2021"
description = "Value-for-value helper utilities for Podcasting 2.0"
license = "MIT OR Apache-2.0"
keywords = ["bitcoin", "podcast", "rss", "v4v"]
repository = "https://github.com/rssblue/v4v"
readme = "README.md"

[dev-dependencies]
pretty_assertions = "1.4.0"
paste = "1.0.15"

[dependencies]
base64 = "0.22.1"
hmac-sha256 = "1.1.7"
http02 = { package = "http", version = "0.2.12" }
http1 = { package = "http", version = "1.1.0" }
time = "0.3.36"
