[package]
authors = ["RSS Blue", "Dovydas Joksas"]
name = "v4v"
version = "0.5.19"
edition = "2021"
description = "Value-for-value helper utilities for Podcasting 2.0"
license = "MIT OR Apache-2.0"
keywords = ["bitcoin", "podcast", "rss", "v4v"]
repository = "https://github.com/rssblue/v4v"
readme = "README.md"

[dev-dependencies]
pretty_assertions = "1.4.0"
paste = "1.0.15"

[dependencies]
base64 = "0.22.1"
chrono = {version="0.4.38", features=["serde"]}
hmac-sha256 = "1.1.7"
http02 = { package = "http", version = "0.2.12" }
http1 = { package = "http", version = "1.1.0" }
reqwest = {version="0.12.7", default-features=false, features=["rustls-tls"] }
serde = { version="1.0.209", features=["derive"] }
serde_json = "1.0.127"
strum = { version = "0.26.3", features = ["derive"] }
time = "0.3.36"
url = {version="2.5.2", features=["serde"]}
uuid = {version="1.10.0", features=["serde"]}
